# tcAdmin

./: .dockerfile  .gitignore  app.js  db.sql  dbbackup.py  dbupdate.py  env_sample.txt  install.js  install.py  key.py  list.js  nginx_sample.txt  otp.js  package-lock.json  package.json  release.sql  setup.sh  tcadmin.sql  test.js  test.sh
.github/workflows/: deploy.yml
public/: label.js  main.css  menu.js
public/img/: api.php
public/pctools/: pctools.py
public/pctools/pctools_rust_win/: Cargo.toml
public/pctools/pctools_rust_win/src/: main.rs
routes/: ap.js  chromebook.js  connection.js  contacts.js  desktop.js  docs.js  guide.js  hotspot.js  info.js  inventory.js  ipads.js  laptop.js  macbooks.js  maps.js  misc.js  monitoring.js  networking.js  news.js  old_servers.js  parts.js  passwords.js  phones.js  printers.js  projectors.js  renew.js  repairs.js  servers.js  settings.js  smartboards.js  staff.js  student.js  submit_repair.js  user.js  wifi.js
tools/: monitor.py  renewal.py  snmp.py  snmp_basic.py
utils/: database.js  encryption.js  logs.js  pages-1.txt  session.js
views/: chromebook.hbs  contacts.hbs  desktop.hbs  docs.hbs  documents.hbs  guide.hbs  guide_view.hbs  hotspot.hbs  index.hbs  inventory.hbs  ipad.hbs  laptop.hbs  login.hbs  macbook.hbs  maps.hbs  misc.hbs  monitoring.hbs  networking.hbs  news.hbs  parts.hbs  passwords.hbs  phones.hbs  printers.hbs  projectors.hbs  renew.hbs  repairs.hbs  scan.hbs  server.hbs  servers.hbs  settings.hbs  smartboard.hbs  staff.hbs  students.hbs  submit_repair.hbs  template.hbs  wifi.hbs  wireless.hbs
(+7 files in other folders)
